--- a/src/components/start/Start.css
+++ b/src/components/start/Start.css
@@ -1,29 +1,28 @@
 .start_form {
-    font-family: 'Do Hyeon';
     position: relative;
-    width: 393px;
-    height: 852px;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('C:\Users\heydy\Desktop\bingsoochef\src\assets\background_vivid.png'); 
+    background-image:url('C:\Users\heydy\Desktop\bingsoochef\src\assets\background.png');
     background-size: cover;
-    background-position: center
+    background-position: center;
+    
     }
 
 .start_form button{
-    font-family: 'Do Hyeon';
-    margin-top: 180px;
-    box-sizing: border-box;
     position: absolute;
-    width: 329px;
+    top: 50%; /* Vertical center */
+    left: 50%; /* Horizontal center */
+    transform: translate(-50%, -50%); /* Adjust for button size */
+    box-sizing: border-box;
+    width: 300px;
     height: 60px;
-    left: 32px;
-    top: 372px;
     background-color: antiquewhite;
     border-radius: 16px;
     font-weight: 400;
-    font-size: 32px;
+    font-size: 2rem;
     line-height: 20px;
     text-align: center;
     letter-spacing: 3px;
