--- a/src/components/prelogin/PreLogin.css
+++ b/src/components/prelogin/PreLogin.css
@@ -2,47 +2,50 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-   justify-content: center;
+    justify-content: center;
     width: 100vw;
     height: 100vh;
    
-   
-    
     background-image:url('C:\Users\heydy\Desktop\bingsoochef\src\assets\background.png');
     background-size: cover;
     background-position: center;
-    gap:30px;
+    gap:40px;
     }
 
     .prelogin_form button{
-        width: 80%;
-        max-width: 360px;
-        height: 65px;
-
+         
+        
+        width: 70%;
+        max-width: 600px;
+        height: 8%;
+        top:50%;
+         transform: translate(0%,-100%); /* Adjust for button size */
         margin:10px 0;
         padding:15px;
 
         border: none;
-        border-radius: 16px;
+        border-radius: 25px;
         
         text-align: center;
         font-weight: 400;
-        font-size: 32px;
+        font-size: 3.5rem;
+
         line-height: 20px;
         letter-spacing: 3px;
+
         cursor: pointer;
         box-sizing: border-box;
         
     }
 
     .prelogin_form button:nth-child(1) {
-        background-color: #ffeb3b; /* 노란색 배경 */
-        color: black;
+        background-color: #FFE812; /* 노란색 배경 */
+        color: #381F1F;
         
       }
       
       .prelogin_form button:nth-child(2) {
-        background-color: #00c853; /* 초록색 배경 */
+        background-color: #03E266; /* 초록색 배경 */
         color: white;
       }
       
@@ -52,11 +55,11 @@
       }
       
       .prelogin_form button:nth-child(4) {
-        background-color: #ffe0b2; /* 연한 주황색 배경 */
-        color: black;
+        background-color: #FDF0CC; /* 연한 주황색 배경 */
+        color: #03526B;
       }
       
       .prelogin_form button:nth-child(5) {
-        background-color: #0288d1; /* 파란색 배경 */
-        color: white;
+        background-color: #03526B; /* 파란색 배경 */
+        color: #FDF0CC;
       }
