--- a/src/components/prelogin/PreLogin.css
+++ b/src/components/prelogin/PreLogin.css
@@ -13,11 +13,11 @@
     }
 
     .prelogin_form button{
-         
-        
         width: 70%;
-        max-width: 600px;
+        max-width: 820px;
         height: 8%;
+        max-height: 150px;
+        
         top:50%;
          transform: translate(0%,-100%); /* Adjust for button size */
         margin:10px 0;
