--- a/src/components/createaccount/CreateAccount.css
+++ b/src/components/createaccount/CreateAccount.css
@@ -13,7 +13,7 @@
 
 .title {
     position: absolute;
-    top: 5%; /* Vertical center */
+    top: 3%; /* Vertical center */
     left: 50%;
     transform: translate(-50%);
     text-align: center;
@@ -73,13 +73,13 @@
     left: 50%; /* Horizontal center */
     transform: translate(-50%);
 
-
+    padding:10px;
     width: 70%;
     max-width: 820px;
     height: 8%;
     max-height: 150px;
     box-sizing: border-box;
-
+    
     border-radius: 25px;
     border: none;
 
