--- a/src/components/prelogin/PreLogin.css
+++ b/src/components/prelogin/PreLogin.css
@@ -6,8 +6,8 @@
     width: 100vw;
     height: 100vh;
    
-    background-image:url('C:\Users\heydy\Desktop\bingsoochef\src\assets\background.png');
-    background-size: cover;
+    background-image:url('/src/assets/background.png');
+        background-size: cover;
     background-position: center;
     gap:40px;
     }
