--- a/src/components/setpassword/SetPassword.module.css
+++ b/src/components/setpassword/SetPassword.module.css
@@ -1,32 +1,38 @@
+.setpassword_display{
+    display:flex;
+    justify-content: center;
+}
 .setpassword_form {
     position: relative;
     width: 100vw;
+    max-width: 600px;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image:url('/src/assets/background.png');
+    background-image:url('/src/assets/background2.png');
     background-size: cover;
     background-position: center;
     
     }
 
-.setpassword_form button{
+.signup{
     position: absolute;
-    top: 50%; /* Vertical center */
+    top: 80%; /* Vertical center */
     left: 50%; /* Horizontal center */
     transform: translate(-50%, -50%); /* Adjust for button size */
     box-sizing: border-box;
     width: 300px;
     height: 60px;
-    background-color: #FDF0CC;
+    background-color: #03526B;
     border-radius: 16px;
     border: none;
-    color: #03526B;
+    color: #FDF0CC;
     font-weight: 400;
     font-size: 2rem;
     line-height: 20px;
     text-align: center;
     letter-spacing: 3px;
+    cursor: pointer;
 
 }
