--- a/src/components/start/Start.css
+++ b/src/components/start/Start.css
@@ -1,28 +1,25 @@
 .start_display{
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: 100vh;
 }
 
 .start_form {
-    position: relative;
-    width: 100vw;
-    max-width: 980px;
-    height: 100vh;
+    width: 100%;
+    max-width: 520px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image:url('/src/assets/background2_sun.png');
-    background-size: cover;
+    background-image:url('/src/assets/background_sun.png');
+    background-color: cover;
+    background-repeat: no-repeat;
     background-position: center;
     text-align: center;
     
     }
 
 .start_form h1{
-    position: absolute;
-    top: 15%; /* Vertical center */
-    left: 50%;
-    transform: translate(-50%);
     text-align: center;
     white-space : nowrap;
     font-size: 48px;
@@ -31,10 +28,6 @@
 
 
 .start_form button{
-    position: absolute;
-    top: 57%; /* Vertical center */
-    left: 50%;
-    transform: translate(-50%);
     box-sizing: border-box;
     width: 80%;
     height: 60px;
