--- a/src/components/prelogin/PreLogin.module.css
+++ b/src/components/prelogin/PreLogin.module.css
@@ -1,17 +1,18 @@
 .preloginDisplay {
   display: flex;
   justify-content: center;
+  width: 100%;
+  height: 100vh;
 }
 
 .preloginForm {
-  width: 100vw;
-  max-width: 980px;
-  height: 100vh;
+  width: 100%;
+  max-width: 520px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("/src/assets/background_sun.png");
+  background-image: url("/src/assets/background/background_sun.png");
   background-size: cover;
   background-position: center;
   text-align: center;
@@ -39,7 +40,7 @@
   box-sizing: border-box;
   width: 80%;
   height: 60px;
-  border-radius: 25px;
+  border-radius: 16px;
   border: none;
   text-align: center;
   letter-spacing: 3px;
@@ -53,7 +54,7 @@
   background-color: #ffe812; /* 노란색 배경 */
   color: #381f1f;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 19px;
   line-height: 20px;
 }
 
