--- a/src/components/start/Start.css
+++ b/src/components/start/Start.css
@@ -11,15 +11,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image:url('/src/assets/background_sun.png');
-    background-color: cover;
+    background-image:url("/src/assets/background/background_sun.png");
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     text-align: center;
     
-    }
+}
+
+.start_wrapper{
+    width: calc(100% - 102px);
+    padding: 0 51px;
+}
 
 .start_form h1{
+    padding-bottom: 10%;
     text-align: center;
     white-space : nowrap;
     font-size: 48px;
@@ -28,11 +34,10 @@
 
 
 .start_form button{
-    box-sizing: border-box;
-    width: 80%;
+    width: 100%;
     height: 60px;
     background-color: #FDF0CC;
-    border-radius: 25px;
+    border-radius: 16px;
     border: none;
     color: #03526B;
     font-weight: 400;
