--- a/src/components/createaccount/CreateAccount.module.css
+++ b/src/components/createaccount/CreateAccount.module.css
@@ -22,12 +22,13 @@
   display: flex;
   justify-content: center;
   gap: 25%;
-  padding-bottom: 30%;
-  padding-right: 30%;
   width: 100%;
+  margin-top: 60px;
+  padding-right: 30%;
+  margin-bottom: 10%;
+  margin-bottom: 120px;
 }
 .back {
-  margin-right: 20%;
   background: none;
   width: 10%;
   border: none;
@@ -48,7 +49,7 @@
 
 .inputlabel {
   /* Adjust for button size */
-  padding-bottom: 10px;
+  margin-bottom: 10px;
   padding-right: 70%;
   font-size: 16px;
   box-sizing: border-box;
@@ -71,7 +72,7 @@
 }
 
 .inputdup_btnWrapper {
-  padding-bottom: 10%;
+  margin-bottom: 40px;
   display: flex;
   gap: 4px;
   align-items: center;
@@ -110,25 +111,25 @@
 }
 
 .gotocheck {
-  width: calc(100% - 102px);
+  width: calc(100% - 50px);
   height: 60px;
+  border-style: box;
   border-radius: 16px;
   border: none;
   color: #fdf0cc;
   background-color: #03526b;
-  margin-bottom: 10%;
+  padding: 20px;
   font-weight: 400;
   font-size: 32px;
   line-height: 20px;
   text-align: center;
   letter-spacing: 3px;
-
   cursor: pointer;
 }
 
 .loginform_btnWrapper {
-  padding-top: 30%;
-  padding-bottom: 20%;
+  margin-top: 200px;
+  margin-bottom: 20%;
   display: flex;
   align-items: center;
   justify-content: center;
