--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,69 +1,109 @@
+.main_display {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+
 .main_form {
-    position: relative;
-    width: 100vw;
-    max-width: 980px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image:url('/src/assets/background_sun.png');
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-    
-    }
-.main_form h1{
-    position: absolute;
-    top: 15%; /* Vertical center */
-    left: 50%;
-    transform: translate(-50%);
-    text-align: center;
-    font-size: 60px;
-    color: #03526B;
+  width: 100%;
+  max-width: 520px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("/src/assets/background/background_sun.png");
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+}
+
+.copybutton{
+  color:#FDF0CC;
+  font-size: 32px;
+  width: calc(100% - 90px);
+  height: 45px;
+  background-color: #03526b;
+  border-radius: 25px;
+  border: none;
+  cursor: pointer;
+  z-index: 10;
+  position: relative;
+  margin-top: 10%;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 2px;
+
+}
+
+.container{
+  width: 90%;
+
+}
+.bingsoo-container {
+  width: 80%;
+  padding-top: 100px;
+  position: relative;
+  width: 100%;
+  max-width: 450px; /* 빙수 이미지의 최대 너비 설정 */
+  margin: 0 auto;
+  overflow: visible;
 }
 
 
-/* Main.css */
-
-/* 모달 팝업 스타일 */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-    align-items: center;
-    justify-content: center;
+.bingsoo {
+  width: 100%;
+  position: relative;
 }
 
-.modal.show {
-    display: flex;
+
+.bingsoo img {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
-.modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 300px;
-    text-align: center;
+.topping-slider {
+  margin-top: 20%;
+  position: absolute;
+  overflow: visible;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+.topping-row {
+  margin-bottom: 5%;
+  display: flex;
+  justify-content: center;
 }
 
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+.topping-row img {
+  max-width: 25vw;
+  object-fit: contain;
+  z-index: 10;  
 }
+
+.slider-controls {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.slider-controls button {
+  padding: 10px 20px;
+  background-color: #333;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.slider-controls button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
