--- a/src/components/resetpassword/ResetPassword.module.css
+++ b/src/components/resetpassword/ResetPassword.module.css
@@ -1,14 +1,12 @@
-.setpassword_display {
+.resetpassword_display {
   display: flex;
   justify-content: center;
   width: 100%;
   height: 100vh;
 }
 
-.setpassword_form {
-
+.resetpassword_form {
   width: 100%;
-  gap: 40px;
   max-width: 520px;
   display: flex;
   flex-direction: column;
@@ -21,7 +19,7 @@
 }
 
 .title {
-  margin-top: 40px;
+  margin-bottom: 60px;
   text-align: center;
   white-space: nowrap;
   font-size: 24px;
@@ -34,14 +32,15 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding-bottom:80px;
+  margin-bottom: 150px;
+
 }
 
-.Wrapper label{
-    padding-right: 70%;
-    font-size: 16px;
-    margin-bottom: 5px; 
-    color: #03526b;
+.Wrapper label {
+  padding-right: 70%;
+  font-size: 16px;
+  margin-bottom: 5px;
+  color: #03526b;
 }
 .input::placeholder {
   background-image: url("/src/assets/icon/lockicon.png");
@@ -71,11 +70,11 @@
   letter-spacing: 2px;
 }
 
-.signup {
-  margin-top: 160px;
+.gologin {
   width: calc(100% - 102px);
   height: 60px;
   background-color: #03526b;
+  border-style: box;
   border-radius: 16px;
   border: none;
   color: #fdf0cc;
@@ -85,5 +84,5 @@
   text-align: center;
   letter-spacing: 3px;
   cursor: pointer;
-  margin-bottom: 10%;
+  margin-bottom: 30%;
 }
