--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -41,8 +41,8 @@
 
 }
 .bingsoo-container {
-  width: 80%;
   padding-top: 100px;
+  width: 80%;
   position: relative;
   width: 100%;
   max-width: 450px; /* 빙수 이미지의 최대 너비 설정 */
@@ -61,6 +61,7 @@
   width: 100%;
   height: 100%;
   display: block;
+  position: relative;
 }
 
 .topping-slider {
@@ -74,18 +75,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 10;
+}
+
+.slick-slide{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .topping-row {
   margin-bottom: 5%;
   display: flex;
   justify-content: center;
+  z-index: 20;
+
+
 }
 
 .topping-row img {
   max-width: 25vw;
-  object-fit: contain;
-  z-index: 10;  
+  object-fit: contain;  
+  z-index: 30;
 }
 
 .slider-controls {
@@ -107,3 +118,20 @@
   cursor: not-allowed;
 }
 
+.slick-slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%; 
+}
+.slick-prev
+{
+  margin-left: 20px;
+  cursor: pointer;
+}
+.slick-next
+{
+  margin-right: 20px;
+  cursor: pointer;
+}
