--- a/src/components/setting/Setting.module.css
+++ b/src/components/setting/Setting.module.css
@@ -62,6 +62,7 @@
     font-size: 14px;
     color: #777C89;
     text-decoration: underline;
+    cursor: pointer;
   }
 .bodyWrapper1{
     width: 100%;
@@ -163,17 +164,21 @@
     margin-right: 60%; 
 }
 
+
 .change1{
     color:#777C89;
     text-decoration: underline;
+    cursor: pointer;
 }
 .change2{
     color:#777C89;
     text-decoration: underline;
+    cursor: pointer;
 }
 .perm{
     color:#777C89;
     text-decoration: underline;
+    cursor: pointer;
 }
 .bodyWrapper2 label{
     font-size: 14px;
