--- a/src/components/slidercomponent/SliderComponent.css
+++ b/src/components/slidercomponent/SliderComponent.css
@@ -39,6 +39,8 @@
     margin-left: 60px;
     margin-top: 20px;
     margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
 }
 
 
