--- a/src/components/seetplist/SeeTPlist.module.css
+++ b/src/components/seetplist/SeeTPlist.module.css
@@ -1,3 +1,8 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  overflow: auto; /* 스크롤을 막기 위해 오버플로우 숨김 */
+}
 .seetplistDisplay {
   display: flex;
   justify-content: center;
@@ -17,16 +22,21 @@
   text-align: center;
 }
 .wrapper{
-  width:calc(100% - 50px);
+  width:calc(100% - 30px);
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  justify-content: flex-start;
+ /* 세로 방향 스크롤 활성화 */
+/* 세로 방향 스크롤 스냅 활성화 */
 }
 
 .top{
   width: 100%;
-  margin-top: 50px;
+  margin-top: 30px;
   justify-content: center;
   align-items: center;
   display: flex;
@@ -34,7 +44,7 @@
 }
 
 .top label{
-  font-size: 25px;
+  font-size: 23px;
   color: black;
 }
 
@@ -50,3 +60,110 @@
   font-size: 14px;
   width: 100%;
 }
+
+
+/* 기존 스타일 유지 */
+
+/* 기존 스타일 유지 */
+.swipercontainer{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
+}
+
+.slider {
+  padding-top: 20px;
+  width: 100%;
+  height: 90%; /* 슬라이더의 높이 설정 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.toppingBox {
+  background-color: #B8F7FE;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  margin-bottom: 20px; /* 박스 간 간격 추가 */
+  width: 90%; /* 박스 크기 조절 */
+  
+
+}
+
+.toppingHeader {
+  font-size: 18px;
+  color: #1581A3;
+  padding-bottom: 10px;
+}
+
+.toppingHeader span {
+  font-size: 24px;
+  color: #1581A3;
+}
+.toppingHeader img{
+  cursor: pointer;
+  margin-left: 8px;
+  width: 70px;
+  height: 70px;
+}
+
+.toppingContentWrapper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: aliceblue;
+  padding: 5px;
+  border-radius: 16px;
+}
+
+.toppingContent {
+  font-size: 16px;
+  color: black;
+  height:13rem;
+  max-height: none;
+  overflow: visible;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-overflow: ellipsis;
+  white-space: normal;
+}
+
+.expandIcon {
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+}
+
+.toppingFooter {
+  padding-top: 10px;
+  font-size: 14px;
+  color: #1581A3;
+}
+
+.replyNotice {
+
+  padding-top: 5px;
+  color: #004d40;
+}
+
+.replyLink {
+    padding: 10px 20px;
+    background-color: #1581A3;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
