--- a/src/components/seetplist/SeeReply.module.css
+++ b/src/components/seetplist/SeeReply.module.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
@@ -20,7 +20,7 @@ p {
   border-radius: 16px;
   max-width: 420px;
   width: 100%;
-  height: 20%;
+  height: 25%;
   display: flex;
   flex-direction: column;
   justify-content: center;
