--- a/src/components/seetplist/SeeTPlist.module.css
+++ b/src/components/seetplist/SeeTPlist.module.css
@@ -1,7 +1,8 @@
 html, body {
   height: 100%;
   margin: 0;
-  overflow: auto; /* 스크롤을 막기 위해 오버플로우 숨김 */
+  overflow: hidden;
+ /* 스크롤을 막기 위해 오버플로우 숨김 */
 }
 .seetplistDisplay {
   display: flex;
@@ -28,10 +29,8 @@ html, body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   justify-content: flex-start;
- /* 세로 방향 스크롤 활성화 */
-/* 세로 방향 스크롤 스냅 활성화 */
+
 }
 
 .top{
@@ -71,22 +70,25 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: auto;
+
 }
 
 .slider {
-  padding-top: 20px;
+  margin-top: 30px;
   width: 100%;
-  height: 90%; /* 슬라이더의 높이 설정 */
-  display: flex;
+  height: 100vh;
+
   justify-content: center;
   align-items: center;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+
 }
 
 .toppingBox {
   background-color: #B8F7FE;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
@@ -95,6 +97,10 @@ html, body {
   margin-top: 100px;
   margin-bottom: 20px; /* 박스 간 간격 추가 */
   width: 90%; /* 박스 크기 조절 */
+  height: 60vh;
+  scroll-snap-align: start; /* 각 슬라이드가 시작 위치에서 스냅되도록 설정 */
+  transition: transform 0.3s ease, opacity 0.3s ease;
+/* 각 슬라이드를 화면 높이에 맞춤 */
   
 
 }
@@ -128,9 +134,10 @@ html, body {
 }
 
 .toppingContent {
-  font-size: 16px;
+  font-size: 17px;
+  font-weight: 400;
   color: black;
-  height:13rem;
+  height:16rem;
   max-height: none;
   overflow: visible;
   display: flex;
@@ -138,6 +145,8 @@ html, body {
   align-items: center;
   text-overflow: ellipsis;
   white-space: normal;
+  letter-spacing: 1px;
+  text-align: left;
 }
 
 .expandIcon {
