main topping 배치(2번째 슬라이드 해결X)

--- a/src/components/aftersignup/AfterSignup.module.css
+++ b/src/components/aftersignup/AfterSignup.module.css
@@ -74,10 +74,11 @@
 
 .slider{
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100%;
-  width: 80%;
+  width: 100%;
 }
 .gotomain {
   margin-top: 36px;
