--- a/src/components/slidercomponent/SliderComponent.module.css
+++ b/src/components/slidercomponent/SliderComponent.module.css
@@ -9,7 +9,7 @@
     justify-content: center;
 }
 
-.slick-slider {
+.slick_slider {
     display: flex;
     justify-content: center;
     align-items: center;
