--- a/src/components/createaccount/CreateAccount.module.css
+++ b/src/components/createaccount/CreateAccount.module.css
@@ -179,3 +179,16 @@
   font-size: 14px;
   cursor: pointer;
 }
+.modalDisplay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  
+  background: rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
