--- a/src/components/emailcheck/EmailCheck.module.css
+++ b/src/components/emailcheck/EmailCheck.module.css
@@ -140,3 +140,15 @@
     /* background-color: #2589ff; */
   }
   
+  .modalDisplay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
