--- a/src/components/setpassword/SetPassword.module.css
+++ b/src/components/setpassword/SetPassword.module.css
@@ -57,12 +57,13 @@
   color: #777c89;
   font-size: 16px;
 }
+
 .input {
   width: calc(100% - 102px);
   height: 60px;
   box-sizing: border-box;
   border-radius: 16px;
-  border: none;
+  border: 1px solid #ccc;
   background-color: #fdf0cc;
   font-weight: 400;
   font-size: 20px;
@@ -70,7 +71,16 @@
   text-align: left;
   letter-spacing: 2px;
 }
+.errorInput {
+  border: 3px solid red; /* 테두리 빨간색 */
+}
 
+.errorMessage {
+  color: red; /* 오류 메시지 빨간색 */
+  font-size: 12px;
+  margin-top: -8px;
+
+}
 .signup {
   margin-top: 160px;
   width: calc(100% - 102px);
