--- a/src/components/modal/OpenLetter.module.css
+++ b/src/components/modal/OpenLetter.module.css
@@ -17,8 +17,8 @@
   padding: 20px;
   border-radius: 50px;
   max-width: 420px;
-  width: 100%;
-  height: 50%;
+  width: 80%;
+  height: 70%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,20 +26,21 @@
 }
 
 .closeButton {
+  margin-top:10px;
   padding: 10px 20px;
   background-color: #03526B;
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 40px;
   cursor: pointer;
+  width: 100px;
 }
 
-.back {
-  background: none;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-top: 20px;
+.bottomWrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 .topWrapper{
   display: flex;
@@ -57,7 +58,8 @@
 .from{
   color: #FDF0CC;
   justify-content: center;
-  align-items: ;
+  align-items: center;
+  font-size: 24px;
 }
 
 .fromWho{
@@ -70,12 +72,15 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
+  align-content: center;
+  letter-spacing: 1px;
 }
+
 .contentWrapper {
   background-color: #f1f1f1;
   border-radius: 30px;
   padding: 20px;
-  height: 200px;
+  height: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -89,4 +94,10 @@
   background-color: #f1f1f1;
   border-radius: 8px;
   transition: max-height 0.3s ease-out;
+}
+
+.reply p{
+  padding-top: 20px;
+  color: #777C89;
+
 }
