--- a/src/components/modal/ReplyLetter.module.css
+++ b/src/components/modal/ReplyLetter.module.css
@@ -17,7 +17,7 @@
     padding: 20px;
     border-radius: 50px;
     max-width: 420px;
-    width: 100%;
+    width: 80%;
     height: 50%;
     display: flex;
     flex-direction: column;
@@ -25,13 +25,75 @@
     text-align: center;
   }
   
+
+  .top{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
+    margin-right: 20px;
+  }
+
+  .top button{
+    margin-right: 75px;
+  }
+  .top label{
+    margin-right: 60px;
+    color:#FDF0CC;
+    font-size: 20px;
+  }
+  .back {
+    background: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  .topWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    margin-top: 20px;
+  }
+
+  .to{
+    color: #FDF0CC;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+  }
+
+  .toWho{
+    color: #007DA4;
+    background-color: #D2ECF3;
+    border-radius: 40px;
+    font-size: 20px;
+    height: 45px;
+    width: 200px;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    align-content: center;
+    letter-spacing: 1px;
+  }
+
+
   .closeButton {
+    margin-top:10px;
     padding: 10px 20px;
     background-color: #03526B;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 40px;
     cursor: pointer;
+    width: 100px;
+  }
+  
+  .bottomWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   .top{
@@ -45,4 +107,28 @@
     background-color: #f1f1f1;
     border-radius: 8px;
     transition: max-height 0.3s ease-out;
+  }
+
+  .replyContent 
+  {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+  .replyContent input{
+    border: none;
+    font-size: 15px;
+    width: 100%;
+    height: 150px;
+    border-radius: 20px;
+    padding: 10px;
+    margin-top: 10px;
+    background-color: #D9D9D9;
+  }
+
+  .replyContent p{
+    margin-left: 200px;
+
   }
