--- a/src/components/modal/OpenQuiz.module.css
+++ b/src/components/modal/OpenQuiz.module.css
@@ -17,7 +17,7 @@
     border-radius: 50px;
     max-width: 420px;
     width: 100%;
-    height: 50%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -53,7 +53,7 @@
     align-items: center;
     gap: 10px;
     margin-bottom: 40px;
-    height: 100px;
+    height: 150px;
     background-color: #D9D9D9 ;
     border-radius: 30px;
   }
@@ -79,26 +79,50 @@
     transition: max-height 0.3s ease-out;
   }
 
-  .twochocies{
+  .twochoices{
     display: flex;
     flex-direction: column;
-    gap: 40px;
-    margin-top: 20px;
+    gap: 20px;
+    margin-top: 10px;
     justify-content: center;
   }
 
-  .threechocies{
+.twochoices button{
+  background-color: #03526B;
+  color: white;
+  border-radius: 16px;
+  height: 48px;
+  border: none;
+  cursor: pointer;
+}
+  .threechoices{
     display: flex;
     flex-direction: column;
-    gap: 40px;
-    margin-top: 20px;
+    gap: 20px;
+    margin-top: 10px;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .threechoices button{
+    background-color: #03526B;
+    color: white;
+    border-radius: 16px;
+    height: 48px;
+    border: none;
+    cursor: pointer;
+  }
+  .fourchoices{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 10px;
     justify-content: center;
   }
-
-  .fourchocies{
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    margin-top: 20px;
-    justify-content: center;
+  .fourchoices button{
+    background-color: #03526B;
+    color: white;
+    border-radius: 16px;
+    height: 48px;
+    border: none;
+    cursor: pointer;
   }
