style: 토핑 선택 ui 완료

--- a/src/components/modal/chef/SelectTP.module.css
+++ b/src/components/modal/chef/SelectTP.module.css
@@ -24,6 +24,19 @@
     justify-content: center;
     text-align: center;
   }
+
+  .back{
+    background: none;
+    border: none;
+    cursor: pointer;
+    width: 10%;
+  }
+
+  .top label{
+    color: #FDF0CC;
+    font-size: 32px;
+    margin-left: 25%;
+  }
   
   .closeButton {
     margin-top:10px;
@@ -37,17 +50,10 @@
   }
   
  
-  .topWrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    margin-top: 20px;
-  }
   .top{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content:start;
+    align-items: center;
   }
   
 
@@ -55,30 +61,47 @@
     background-color: #D9D9D9;
     border-radius: 30px;
     padding: 20px;
-    height: 300px;
+    height: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     word-spacing: 5px;
+    overflow-y: auto;
+
+    margin-top: 20px;
   
   }
 
+  .contentWrapper label{
+    margin-right: 320px;
+    margin-top: 10px;
+
+  }
   .itemsWrapper{
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto; /* 품목 슬라이드 스크롤 */
     overflow-y: hidden;
     gap: 15px;
-    padding: 20px;
-    justify-content: center;
-    margin-top: 20px;
+    padding: 10px;
+    justify-content: flex-start;
     width: 100%;
   }
   
-  .itemCard{
+  .itemCard
+  {
+    border-radius: 20px;
+    border: none;
+    height: 100px;
     cursor: pointer;
     background-color: white;
+    align-items: center;
+    align-content: center;
+    flex: 0 0 30%; /* 아이템 너비를 30%로 설정하여 한 화면에 3개만 보이도록 함 */
   }
  
+  .itemCard img{
+    width: 80px;
+  }
   
