--- a/src/components/main/Main.module.css
+++ b/src/components/main/Main.module.css
@@ -57,7 +57,10 @@
   z-index: 10;
 
   margin-top: 20%;
-  line-height: 20px;
+  @media screen and (min-width: 450px) {
+    margin-top: 40%;
+  }
+    line-height: 20px;
   text-align: center;
   letter-spacing: 2px;
 }
@@ -104,7 +107,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  
+  margin-bottom: 20%;
 
 }
 
