--- a/src/components/modal/chef/QuizSelect.module.css
+++ b/src/components/modal/chef/QuizSelect.module.css
@@ -1,104 +1,66 @@
 .modalDisplay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    
-    background: rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
   
-  .modalContent {
-    background: #61BFBF;
-    padding: 20px;
-    border-radius: 50px;
-    max-width: 420px;
-    width: 80%;
-    height: 70%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-  }
-  
-  .closeButton {
-    margin-top:10px;
-    padding: 10px 20px;
-    background-color: #03526B;
-    color: white;
-    border: none;
-    border-radius: 40px;
-    cursor: pointer;
-    width: 100px;
-  }
-  
-  .bottomWrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-  }
-  .topWrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    margin-top: 20px;
-  }
-  .top{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .from{
-    color: #FDF0CC;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-  }
-  
-  .fromWho{
-    color: #007DA4;
-    background-color: #D2ECF3;
-    border-radius: 40px;
-    font-size: 20px;
-    height: 45px;
-    width: 200px;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 20px;
-    align-content: center;
-    letter-spacing: 1px;
-  }
-  
-  .contentWrapper {
-    background-color: #f1f1f1;
-    border-radius: 30px;
-    padding: 20px;
-    height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    word-spacing: 5px;
-  
-  }
-  
-  .expandedContent {
-    margin-top: 20px;
-    padding: 20px;
-    background-color: #f1f1f1;
-    border-radius: 8px;
-    transition: max-height 0.3s ease-out;
-  }
-  
-  .reply p{
-    padding-top: 20px;
-    color: #777C89;
-  
-  }
-  
+  background: rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modalContent {
+  background: #61BFBF;
+  padding: 20px;
+  border-radius: 50px;
+  max-width: 420px;
+  width: 80%;
+  height: 16%;
+  display: flex;
+  flex-direction: column;
+
+  text-align: center;
+}
+
+.back{
+  background: none;
+  border: none;
+  cursor: pointer;
+  width: 10%;
+}
+
+
+.top{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+
+}
+
+
+.top label{
+  color: #FFFFFF;
+  font-size: 20px;
+}
+
+.buttonWrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+.buttonWrapper button{
+  background: #03526B;
+  border: none;
+  border-radius: 16px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 20px;
+  color: #FFFFFF;
+  width: 120px;
+}
