--- a/src/components/modal/chef/WriteTP.module.css
+++ b/src/components/modal/chef/WriteTP.module.css
@@ -21,8 +21,55 @@
     height: 70%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     text-align: center;
+  }
+  
+  .back{
+    background: none;
+    border: none;
+    cursor: pointer;
+    width: 10%;
+  }
+
+  .top label{
+    color: #FDF0CC;
+    font-size: 28px;
+    margin-right: 35%;
+  }
+
+  .top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .topWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 5px;
+    margin-top: 20px;
+  }
+  .to{
+    color: #FDF0CC;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+  }
+  
+  .toWho{
+    color: #007DA4;
+    background-color: #D2ECF3;
+    border-radius: 40px;
+    font-size: 20px;
+    height: 45px;
+    width: 200px;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    align-content: center;
+    letter-spacing: 1px;
   }
   
   .closeButton {
@@ -42,51 +89,8 @@
     align-items: center;
   
   }
-  .topWrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    margin-top: 20px;
-  }
-  .top{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
   
-  .from{
-    color: #FDF0CC;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-  }
   
-  .fromWho{
-    color: #007DA4;
-    background-color: #D2ECF3;
-    border-radius: 40px;
-    font-size: 20px;
-    height: 45px;
-    width: 200px;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 20px;
-    align-content: center;
-    letter-spacing: 1px;
-  }
-  
-  .contentWrapper {
-    background-color: #f1f1f1;
-    border-radius: 30px;
-    padding: 20px;
-    height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    word-spacing: 5px;
-  
-  }
   
   .expandedContent {
     margin-top: 20px;
@@ -102,3 +106,43 @@
   
   }
   
+  .nextButton{
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #03526B;
+    color: white;
+    border: none;
+    border-radius: 40px;
+    cursor: pointer;
+    width: 100px;
+  }
+
+  .contentWrapper 
+  {
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+  .content{
+    border: none;
+    padding: 10px;
+    font-size: 15px;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    margin-top: 10px;
+    background-color: #D9D9D9;
+    justify-content: center;
+    resize: none;
+    padding: 30px 10px 30px 10px;
+
+  }
+
+
+  .contentWrapper p{
+    margin-left: 200px;
+
+  }
